--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -5,7 +5,7 @@
     align-items: flex-start;
     gap: 50px;
     margin: 120px auto;
-    &--pic {
+    &--picture__container {
     border-radius: 3%;
     }
     @include _768px  {
